fixes so grouped star rating question work

--- a/lib/assets/stylesheets/surveyor.sass
+++ b/lib/assets/stylesheets/surveyor.sass
@@ -130,3 +130,6 @@ body
     :padding 5px
     :cursor pointer
     :background-color $background_color
+
+  .star-container .choices-group .choice:not(:first-child)
+    display: none
