--- a/lib/assets/stylesheets/surveyor.sass
+++ b/lib/assets/stylesheets/surveyor.sass
@@ -50,8 +50,12 @@ body
   .surveyor_language_selection
     :display none
   //.previous_section
-  .next_section
+  .next_section, .save_section
     :float right
+  .save_section
+    small
+      :font-style italic
+
   .survey_section
     span.title
       :display block
