not all sections are required to have a question so don't assume there is one

--- a/app/views/surveyor/edit.html.haml
+++ b/app/views/surveyor/edit.html.haml
@@ -18,7 +18,7 @@
       .save_section
         = save_section
         %br
-        %small= section_last_updated_at(@section).to_s(:default)
+        %small= section_last_updated_at(@section).try(:to_s, :default)
 
     .next_section= next_section
   %br
