--- a/app/views/partials/_section_menu.html.haml
+++ b/app/views/partials/_section_menu.html.haml
@@ -6,7 +6,7 @@
       %select{:id=>"locale", :name=>"new_locale"}
         = options_for_select(@survey.translations.map(&:locale),I18n.locale)
 
-  = t('surveyor.sections')
+  %span.name= t('surveyor.sections')
   %ul
     - @sections.each do |s|
       %li{:class => ("active" if s == @section)}= menu_button_for(s)
