add flash message to surveyor template

--- a/lib/generators/surveyor/templates/app/views/layouts/surveyor_custom.html.erb
+++ b/lib/generators/surveyor/templates/app/views/layouts/surveyor_custom.html.erb
@@ -8,6 +8,10 @@
   <%= surveyor_includes %>
 </head>
 <body>
-  <%= yield %>
+
+    <% flash.each do |key, value| %>
+        <%= content_tag(:div, value, :class => "flash #{key}") %>
+    <% end %>
+    <%= yield %>
 </body>
 </html>
