--- a/app/views/surveyor/edit.html.haml
+++ b/app/views/surveyor/edit.html.haml
@@ -1,5 +1,5 @@
 #surveyor
-  - unless (types = flash.keys.select{|k| [:notice, :error, :warning].include?(k)}).blank?
+  - unless (types = flash.keys.select{|k| [:notice, :error, :warning].include?(k.to_sym)}).blank?
     .surveyor_flash
       = flash_messages(types)
       .close
