--- a/lib/assets/stylesheets/surveyor.sass
+++ b/lib/assets/stylesheets/surveyor.sass
@@ -13,127 +13,126 @@ $surveyor_menus_active_color:#EBEBCC
 $surveyor_menus_border_color:#ccc
 
 body
-  :background-color $background_color
+  background-color: $background_color
 #surveyor
-  :font-family "Century Gothic"
-  :width 960px
-  :padding 20px
-  :margin 0 auto
-  :text-align left
-  :font-family Helvetica
-  :font-size 100%
-  :background-color $surveyor_color
-  :color $surveyor_text_color
+  font-family: "Century Gothic"
+  width: 960px
+  padding: 20px
+  margin: 0 auto
+  text-align: left
+  font-size: 100%
+  background-color: $surveyor_color
+  color: $surveyor_text_color
   .surveyor_flash
-    :background-color $surveyor_flash_background_color
-    :margin 0 auto
-    :padding 5px
-    :width 300px
-    :font-weight bold
-    :text-align center
+    background-color: $surveyor_flash_background_color
+    margin: 0 auto
+    padding: 5px
+    width: 300px
+    font-weight: bold
+    text-align: center
   .survey_title
-    :font-size 2em
-    :font-weight bold
-    :padding 5px 0
+    font-size: 2em
+    font-weight: bold
+    padding: 5px 0
   .surveyor_menu
-    :float right
+    float: right
     ul
-      :background-color $background_color
-      :border 1px solid $surveyor_menus_border_color
-      :border-bottom-width 0
-      :list-style none
+      background-color: $background_color
+      border: 1px solid $surveyor_menus_border_color
+      border-bottom-width: 0
+      list-style: none
       li
-        :border 0 solid $surveyor_menus_border_color
-        :border-bottom-width 1px
+        border: 0 solid $surveyor_menus_border_color
+        border-bottom-width: 1px
       li.active, li.active input[type="submit"]
-        :background-color $surveyor_menus_active_color
+        background-color: $surveyor_menus_active_color
   .surveyor_language_selection
-    :display none
+    display: none
   //.previous_section
   .next_section, .save_section
-    :float right
+    float: right
   .save_section
     small
-      :font-style italic
+      font-style: italic
 
   .survey_section
     span.title
-      :display block
-      :padding 5px 0
-      :font-weight bold
-      :font-size 1.5em
+      display: block
+      padding: 5px 0
+      font-weight: bold
+      font-size: 1.5em
 
   // question groups
   fieldset.g_inline fieldset, fieldset.g_inline ol li
-    :display inline
+    display: inline
   fieldset.g_grid
     table
-      :border-collapse collapse
+      border-collapse: collapse
     li.surveyor_radio label, li.surveyor_check_boxes label
-      :visibility hidden
+      visibility: hidden
       input
-        :visibility visible
+        visibility: visible
   fieldset.g_repeater
     ol fieldset
-      :display inline
+      display: inline
     input[type="submit"].add_row
-      :font-size 0.7em
+      font-size: 0.7em
 
   // question groups and questions
   .survey_section>fieldset>ol
-    :padding-left 1em
+    padding-left: 1em
   fieldset
-    :padding-top 5px
-    :margin-bottom 10px
+    padding-top: 5px
+    margin-bottom: 10px
     ol
       fieldset
-        :vertical-align top
+        vertical-align: top
       li
         label, input
-          :vertical-align top
-        :padding 1px 0
+          vertical-align: top
+        padding: 1px 0
         p.inline-hints
-          :margin 0
-          :padding 0
-          :display inline
+          margin: 0
+          padding: 0
+          display: inline
       li.inline
-        :display inline
+        display: inline
       li.datetime, li.time
         input, fieldset, fieldset ol li
-          :display inline
+          display: inline
     &.q_inline ol li, &.q_inline_inline ol li
-      :display inline
+      display: inline
     input, textarea, select
-      :margin 0 3px
+      margin: 0 3px
     input[type="text"], textarea
-      :font-size 0.8em
+      font-size: 0.8em
 
   fieldset.q_hidden, fieldset.g_hidden, fieldset.g_grid tr.q_hidden
-    :display none !important
+    display: none !important
   fieldset.q_dependent, fieldset.g_dependent
-    :background-color $surveyor_dependent_color
+    background-color: $surveyor_dependent_color
     legend
-      :background-color $surveyor_dependent_color
-      :padding 3px 3px 3px 0
+      background-color: $surveyor_dependent_color
+      padding: 3px 3px 3px 0
   fieldset.q_dropdown, fieldset.q_inline_dropdown, fieldset.q_default_dropdown, fieldset.q_slider, fieldset.q_repeater_dropdown
     label
-      :display none
+      display: none
   fieldset.q_slider
-    :margin-bottom 3em
+    margin-bottom: 3em
     li.select
-      :width 50%
-      :font-size .8em
+      width: 50%
+      font-size: .8em
     .ui-slider span.ui-slider-label-show
-      :position relative
-      :display inline
+      position: relative
+      display: inline
 
   // buttons
   input[type="submit"]
-    :font-size 1em
-    :border 1px
-    :padding 5px
-    :cursor pointer
-    :background-color $background_color
+    font-size: 1em
+    border: 1px
+    padding: 5px
+    cursor: pointer
+    background-color: $background_color
 
   .star-container .choices-group .choice:not(:first-child)
     display: none
