don't display images in error summary

--- a/lib/assets/stylesheets/surveyor.sass
+++ b/lib/assets/stylesheets/surveyor.sass
@@ -28,6 +28,10 @@ body
     margin: 0 auto
     padding: 5px
     font-weight: bold
+
+    img
+      display: none
+
   .survey_title
     font-size: 2em
     font-weight: bold
