formatting menu buttons

--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -235,6 +235,10 @@ $primary-link: #3380FF;
           background-color: #ccc;
         }
 
+        button {
+          text-align: left;
+        }
+
         input, button {
           border: none;
           background-color: transparent;
