for better user experience, making surveyor menu (right sidebar nav) buttons full width

--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -232,6 +232,8 @@ $primary-link: #3380FF;
         }
 
         button {
+          width: 100%;
+          height: 25px;
           text-align: left;
         }
 
