--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -374,22 +374,18 @@ $primary-link: #3380FF;
     
     }
 
-    /* remove above for table instances */
-    table li.choice {
-      
-      label {
-        
-        input,
-        span {
-          position: revert;
-        }
-        
-      }
-      
-    }
-
   }
+
+  /* remove above for table instances */
+  ol.choices-group table li.choice label {
   
+    input,
+    span {
+      position: revert;
+    }
+    
+  }
+    
   input[type="text"],
   select {
     width: 50%;
