redo, wrong order

--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -377,7 +377,7 @@ $primary-link: #3380FF;
   }
 
   /* remove above for table instances */
-  ol.choices-group table li.choice label {
+  table ol.choices-group li.choice label {
   
     input,
     span {
