adding border to question images

--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -676,6 +676,11 @@ $primary-link: #3380FF;
     background-color: #e3e3e3;
   }
 
+  /* border around question images */
+  fieldset img {
+    border: 1px solid #ccc;
+  }
+
 }
 
 
