--- a/app/views/surveyor/index.html.haml
+++ b/app/views/surveyor/index.html.haml
@@ -1,8 +1,6 @@
 #surveyor
-  - unless (types = flash.keys.select{|k| [:notice, :error, :warning].include?(k)}).blank?
-    .surveyor_flash
-      = flash_messages(types)
-      .close
+  = render "partials/flash_messages"
+
   .survey_title= t('surveyor.take_these_surveys')
   %br
   #survey_list
