--- a/app/views/surveyor/show.html.haml
+++ b/app/views/surveyor/show.html.haml
@@ -1,8 +1,5 @@
 #surveyor
-  - unless (types = flash.keys.select{|k| [:notice, :error, :warning].include?(k)}).blank?
-    .surveyor_flash
-      = flash_messages(types)
-      .close
+  = render "partials/flash_messages"
   = semantic_form_for(@response_set, :as => :r, :url => surveyor.update_my_survey_path, :html => {:id => "survey_form", :class => @survey.custom_class}) do |f|
     .survey_title= @survey.title
     - @survey.sections.each do |section|
