removed side menu button height to prevent overlapping

--- a/lib/assets/stylesheets/surveyor.scss
+++ b/lib/assets/stylesheets/surveyor.scss
@@ -233,7 +233,7 @@ $primary-link: #3380FF;
 
         button {
           width: 100%;
-          height: 25px;
+          // height: 25px;
           text-align: left;
         }
 
